fix logo stretching on mobile

--- a/style.css
+++ b/style.css
@@ -13,11 +13,15 @@ body {
 	background-color: #214478;
 }
 
-#header img {
+#logo {
 	margin: 20px 0;
 	display: inline-block;
 	vertical-align: middle;
 	line-height: 64px;
+	width: 300px;
+	height: 60px;
+	background-image: url("/logo.svg");
+	background-size: contain;
 }
 
 #hamburger {
@@ -72,8 +76,9 @@ label[for="hamburger"] {
 }
 
 @media (max-width: 499px) {
-	#header img {
-		max-width: 200px;
+	#logo {
+		width: 200px;
+		height: 40px;
 		margin: 15px 0;
 	}
 
